Bulk remove of item lists

--- a/tasks/templates/tasks/create_item.html
+++ b/tasks/templates/tasks/create_item.html
@@ -16,7 +16,7 @@
     <!-- Navigation Bar -->
     {% include 'tasks/navbar.html' %}
 
-    <div class="container mt-5">
+    <div class="container my-5">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h2>Create Item</h2>
             <a href="{% url 'dashboard' %}" class="btn btn-secondary">Back to Dashboard</a>
